--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
- DB_HOST=localhost
-  DB_USER=aluno
-  DB_PASSWORD=aluno
-  DB_NAME=playlist
-DB_NAME=playlist_teste
-  DB_PORT=5432
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=260488
+DB_NAME=playlist
+DB_NAME=playlist_test
+DB_PORT=5432
+
