--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "express": "^5.1.0",
     "mocha": "^11.4.0",
     "node.js": "^0.0.1-security",
+    "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7",
     "sequelize-test-helpers": "^1.4.3",
-    "sinon": "^20.0.0"
+    "sinon": "^20.0.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
